--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
 	<title>Site Demo</title>
 </head>
 <body>
-	<h1>Test Site</h1>
+	<h1>Test Site.</h1>
+	<p>seems like its working fine!</p>
 
 </body>
 </html>
